{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1600,
  "lineage": "61b96d8d-72b1-62f5-29a6-ac002249dd47",
  "resources": [
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:946828310690:instance/i-07a6439c6e6f740d8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-dynamoDB-full-access",
            "id": "i-07a6439c6e6f740d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fce7d6818c8ae3c3",
            "private_dns": "ip-10-0-1-167.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-3-10-142-28.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.142.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0faef6059a968b115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bb951c568d29032",
            "tags": {
              "Name": "lighting_server_01"
            },
            "tags_all": {
              "Name": "lighting_server_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0122eb71d1b0a5e"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:946828310690:instance/i-003b9227460b31c94",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-dynamoDB-full-access",
            "id": "i-003b9227460b31c94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d0490a75e21d66d",
            "private_dns": "ip-10-0-1-244.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-18-134-252-217.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.252.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5a21f58af2719ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bb951c568d29032",
            "tags": {
              "Name": "heating_server_01"
            },
            "tags_all": {
              "Name": "heating_server_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0122eb71d1b0a5e"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:946828310690:instance/i-090870e2e5c4221ff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-dynamoDB-full-access",
            "id": "i-090870e2e5c4221ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cafb8faf909319e1",
            "private_dns": "ip-10-0-1-84.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-18-170-35-17.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.35.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3b29d44fa10897a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bb951c568d29032",
            "tags": {
              "Name": "status_server_01"
            },
            "tags_all": {
              "Name": "status_server_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0122eb71d1b0a5e"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:loadbalancer/app/microservices/ab9e8b394b6fef63",
            "arn_suffix": "app/microservices/ab9e8b394b6fef63",
            "desync_mitigation_mode": "defensive",
            "dns_name": "microservices-1858567950.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:loadbalancer/app/microservices/ab9e8b394b6fef63",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0122eb71d1b0a5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07bb951c568d29032"
              },
              {
                "subnet_id": "subnet-0e7e9a12143544239"
              },
              {
                "subnet_id": "subnet-0f5b32a1a2b5278e0"
              }
            ],
            "subnets": [
              "subnet-07bb951c568d29032",
              "subnet-0e7e9a12143544239",
              "subnet-0f5b32a1a2b5278e0"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07a5ce9204986881c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "microservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener/app/microservices/ab9e8b394b6fef63/183e970db0b5f995",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener/app/microservices/ab9e8b394b6fef63/183e970db0b5f995",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:loadbalancer/app/microservices/ab9e8b394b6fef63",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/1e343f6276e7d4dd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/1e343f6276e7d4dd",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener/app/microservices/ab9e8b394b6fef63/183e970db0b5f995",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer",
            "module.load_balancer.aws_lb_listener.microservice",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/heating-target-group/d58b2118ee246599",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/90c3e40bd09ea2eb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/90c3e40bd09ea2eb",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener/app/microservices/ab9e8b394b6fef63/183e970db0b5f995",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer",
            "module.load_balancer.aws_lb_listener.microservice",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/status-target-group/fa6e82fae58d064d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/127369077a647a14",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener-rule/app/microservices/ab9e8b394b6fef63/183e970db0b5f995/127369077a647a14",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:listener/app/microservices/ab9e8b394b6fef63/183e970db0b5f995",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer",
            "module.load_balancer.aws_lb_listener.microservice",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c",
            "arn_suffix": "targetgroup/lights-target-group/0b3341e917b06b2c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lights-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/heating-target-group/d58b2118ee246599",
            "arn_suffix": "targetgroup/heating-target-group/d58b2118ee246599",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/heating-target-group/d58b2118ee246599",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/status-target-group/fa6e82fae58d064d",
            "arn_suffix": "targetgroup/status-target-group/fa6e82fae58d064d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/status-target-group/fa6e82fae58d064d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c-20231208165414220900000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/lights-target-group/0b3341e917b06b2c",
            "target_id": "i-07a6439c6e6f740d8"
          },
          "dependencies": [
            "module.app_server.aws_instance.app_server",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/heating-target-group/d58b2118ee246599-20231208165414155000000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/heating-target-group/d58b2118ee246599",
            "target_id": "i-003b9227460b31c94"
          },
          "dependencies": [
            "module.app_server.aws_instance.app_server",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/status-target-group/fa6e82fae58d064d-20231208165414163800000005",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:946828310690:targetgroup/status-target-group/fa6e82fae58d064d",
            "target_id": "i-090870e2e5c4221ff"
          },
          "dependencies": [
            "module.app_server.aws_instance.app_server",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group/sg-0c0122eb71d1b0a5e",
            "description": "Security group for app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0122eb71d1b0a5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "84.70.197.84/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_server",
            "name_prefix": "",
            "owner_id": "946828310690",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0c61c4a0ec1df8225",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c61c4a0ec1df8225",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0c61c4a0ec1df8225",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0464a2e63cfd0735c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0464a2e63cfd0735c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0464a2e63cfd0735c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0e1624c9f820bd0e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e1624c9f820bd0e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0e1624c9f820bd0e1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-078f031dd1c4b418d",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-078f031dd1c4b418d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-078f031dd1c4b418d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0516d3f0f0e0597ed",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0516d3f0f0e0597ed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0516d3f0f0e0597ed",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-08b9a26f4e0c99132",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-08b9a26f4e0c99132",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-08b9a26f4e0c99132",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "port3000_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0c02bc817962e62c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0c02bc817962e62c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0c02bc817962e62c5",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "port3000_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-0b6a5f2eb9e16f649",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-0b6a5f2eb9e16f649",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-0b6a5f2eb9e16f649",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:security-group-rule/sgr-084e285d2a4849a40",
            "cidr_ipv4": "84.70.197.84/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-084e285d2a4849a40",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c0122eb71d1b0a5e",
            "security_group_rule_id": "sgr-084e285d2a4849a40",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app_server",
            "module.security.data.http.myipaddr",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:internet-gateway/igw-0dbcbd2862cb407c1",
            "id": "igw-0dbcbd2862cb407c1",
            "owner_id": "946828310690",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-igw"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbcbd2862cb407c1",
            "id": "r-rtb-0f073bef7cb6412a41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f073bef7cb6412a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:route-table/rtb-0f073bef7cb6412a4",
            "id": "rtb-0f073bef7cb6412a4",
            "owner_id": "946828310690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbcbd2862cb407c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c800726baa26aecc",
            "route_table_id": "rtb-0f073bef7cb6412a4",
            "subnet_id": "subnet-07bb951c568d29032"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e91dd3b54cec1dd8",
            "route_table_id": "rtb-0f073bef7cb6412a4",
            "subnet_id": "subnet-0e7e9a12143544239"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019a2665432600dcb",
            "route_table_id": "rtb-0f073bef7cb6412a4",
            "subnet_id": "subnet-0f5b32a1a2b5278e0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-0df56432db10e7b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df56432db10e7b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2a"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-0b3ffcc14ab142a77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3ffcc14ab142a77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2b"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-0696805b4c362e144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0696805b4c362e144",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-private-eu-west-2c"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-07bb951c568d29032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bb951c568d29032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2a"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-0e7e9a12143544239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e9a12143544239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2b"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:subnet/subnet-0f5b32a1a2b5278e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b32a1a2b5278e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946828310690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smarthome-microservices-public-eu-west-2c"
            },
            "vpc_id": "vpc-07a5ce9204986881c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:946828310690:vpc/vpc-07a5ce9204986881c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9a76191c2c734c3",
            "default_route_table_id": "rtb-0c3308049d3d22252",
            "default_security_group_id": "sg-0b7212eae2326dae7",
            "dhcp_options_id": "dopt-0b67692efe0e2c52e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a5ce9204986881c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3308049d3d22252",
            "owner_id": "946828310690",
            "tags": {
              "Name": "smarthome-microservices"
            },
            "tags_all": {
              "Name": "smarthome-microservices"
            }
          }
        }
      ]
    }
  ]
}